--- a/ArtsandCrafts/resources/css/index.css
+++ b/ArtsandCrafts/resources/css/index.css
@@ -4,7 +4,7 @@
 
 
 h1 {
-  background-image: url("https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-2/dasmotos-arts_redline.jpg");
+  background-image: url("https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-2/pattern.jpeg");
   font-size: 100px;
   font-weight: bold;
   color: khaki;
